Person_Sample_Project_/terminal.txt.txt
Microsoft Windows [Version 10.0.19044.1889]
(c) Microsoft Corporation. All rights reserved.

C:\Users\hp>cd C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project

C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project>touch app.js
Touching app.js

C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project>npm init
This utility will walk you through creating a package.json file.
It only covers the most common items, and tries to guess sensible defaults.

See `npm help init` for definitive documentation on these fields
and exactly what they do.

Use `npm install <pkg>` afterwards to install a package and
save it as a dependency in the package.json file.

Press ^C at any time to quit.
package name: (person_sample_project)
version: (1.0.0)
description:
entry point: (app.js)
test command:
git repository:
keywords:
author:
license: (ISC)
About to write to C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project\package.json:

{
  "name": "person_sample_project",
  "version": "1.0.0",
  "description": "",
  "main": "app.js",
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1"
  },
  "author": "",
  "license": "ISC"
}


Is this OK? (yes)

C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project>
C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project>npm i mongoose

added 28 packages, and audited 29 packages in 5s

4 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities

C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project>node app.js
C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project\app.js:21
},
 ^

SyntaxError: Unexpected token ','
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1032:15)
    at Module._compile (node:internal/modules/cjs/loader:1067:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1157:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)       
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47

C:\Users\hp\Desktop\About MongoDB\Person_Sample_Project>node app.js
success